[gd_scene load_steps=3 format=3 uid="uid://c6jqf5uaxd7dx"]

[ext_resource type="Script" path="res://scripts/color_selector.gd" id="1_c1r3f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gp1nm"]
size = Vector2(40, 40)

[node name="color_selector" type="ColorRect"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
script = ExtResource("1_c1r3f")

[node name="right_arrow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_arrow"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_gp1nm")

[node name="delay" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -34.0
offset_top = -27.0
offset_right = 73.0
offset_bottom = -1.0
text = "Player 1 Color"

[connection signal="body_entered" from="right_arrow" to="." method="_on_right_arrow_body_entered"]
[connection signal="body_exited" from="right_arrow" to="." method="_on_right_arrow_body_exited"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
